[package]
name = "sample"
version = "0.1.0"
authors = ["jaspalsinghsaini <jaspal.singh@iitrpr.ac.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-garbling = { git = "https://github.com/GaloisInc/swanky" }
scuttlebutt = { git = "https://github.com/GaloisInc/swanky" }
ocelot = { git = "https://github.com/GaloisInc/swanky" }
